--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,7 +1,8 @@
-<table class="table">
-  <thead>
-        <ul *ngFor="let brand of brands" class="list-group">
-        <li class="list-group-item">{{brand.brandName}}</li>
-        </ul>
-  </thead>
-</table>
+<ul class="list-group">
+  <li [class]="getAllBrandClass()" routerLink ="/cars"><strong>Tüm Markalar</strong></li>
+  <li (click)="setCurrentBrand(brand)"
+  routerLink = "/cars/brand/{{brand.brandId}}" 
+  *ngFor="let brand of brands"
+  [class]="getCurrentBrandClass(brand)">{{brand.brandName}}</li>
+</ul>
+ 
